--- a/LiveMapDashboard.Web/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/CategoryList/Default.cshtml
@@ -2,33 +2,42 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model LiveMapDashboard.Web.Models.Category.CategoryListViewModel
 
-<div class="py-4 flex justify-end">
-    <a asp-controller="category" asp-action="form" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
-        New Category
-    </a>
-</div>
+@{
+    Layout = "~/Views/Shared/Layouts/_DefaultLayout.cshtml";
+}
 
-<div class="flex flex-col">
-    <div class="-m-1.5 overflow-x-auto">
-        <div class="p-1.5 min-w-full inline-block align-middle">
-            <div class="border border-gray-200 rounded-lg overflow-hidden dark:border-neutral-700">
-                <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
-                    <thead>
-                    <tr>
-                        <th scope="col"
-                            class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
-                            Name
-                        </th>
-                        <th scope="col"
-                            class="px-6 py-3 text-end text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
-                            Action
-                        </th>
-                    </tr>
-                    </thead>
-                    <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-                    @foreach (
+@section TopBarActions
+{
+    <div class="py-4 flex justify-end">
+        <a asp-controller="category" asp-action="form" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
+            New Category
+        </a>
+    </div>
+}
+
+@section Content
+{
+    <div class="flex flex-col">
+        <div class="-m-1.5 overflow-x-auto">
+            <div class="p-1.5 min-w-full inline-block align-middle">
+                <div class="border border-gray-200 rounded-lg overflow-hidden dark:border-neutral-700">
+                    <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
+                        <thead>
+                        <tr>
+                            <th scope="col"
+                                class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
+                                Name
+                            </th>
+                            <th scope="col"
+                                class="px-6 py-3 text-end text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
+                                Action
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+                        @foreach (
                         var category in Model.Categories)
-                    {
+                        {
                         <tr>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
                                 @category.CategoryName
@@ -39,37 +48,38 @@
                                     Edit
                                 </a>
 
-                                <button type="button" class="inline-flex items-center gap-x-2 pl-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-hidden focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none dark:text-red-500 dark:hover:text-red-400 dark:focus:text-red-400" aria-haspopup="dialog" aria-expanded="false" data-hs-overlay="#delete-category-@category.CategoryName.Replace(' ', '-').ToLower()">
+                                <button type="button" class="inline-flex items-center gap-x-2 pl-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-hidden focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none dark:text-red-500 dark:hover:text-red-400 dark:focus:text-red-400" aria-haspopup="dialog" aria-expanded="false" aria-controls="delete-category-@category.CategoryName.Replace(' ', '-').ToLower()" data-hs-overlay="#delete-category-@category.CategoryName.Replace(' ', '-').ToLower()">
                                     Delete
                                 </button>
                             </td>
                         </tr>
-                    }
-                    </tbody>
-                </table>
+                        }
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-@foreach (var category in Model.Categories)
-{
-    var deleteModalModel = new DeleteModalViewModel
+    @foreach (var category in Model.Categories)
     {
-        ModalId = $"delete-category-{category.CategoryName.Replace(' ', '-').ToLower()}",
-        ModalTitle = $"Delete Category: {category.CategoryName}",
-        WarningMessage = "This action is not reversible, so please continue with caution.",
-        DangerMessage = category.InUse == true
-            ? "This category is in use by other points of interest. Removing it will update related points of interest to have the default category of 'empty'."
-            : null,
-        FormController = "Category",
-        FormAction = "Delete",
-        HiddenInputs = new Dictionary<string, string>
+        var deleteModalModel = new DeleteModalViewModel
         {
-            { "CategoryName", category.CategoryName },
-            { "NewValue", category.CategoryName }
-        }
-    };  
+            ModalId = $"delete-category-{category.CategoryName.Replace(' ', '-').ToLower()}",
+            ModalTitle = $"Delete Category: {category.CategoryName}",
+            WarningMessage = "This action is not reversible, so please continue with caution.",
+            DangerMessage = category.InUse == true
+                ? "This category is in use by other points of interest. Removing it will update related points of interest to have the default category of 'empty'."
+                : null,
+            FormController = "Category",
+            FormAction = "Delete",
+            HiddenInputs = new Dictionary<string, string>
+            {
+                { "CategoryName", category.CategoryName },
+                { "NewValue", category.CategoryName }
+            }
+        };  
 
-    @await Html.PartialAsync("Components/CategoryList/_DeleteModal", deleteModalModel)
+        @await Html.PartialAsync("Components/CategoryForm/_DeleteModal", deleteModalModel)
+    }
 }
