--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_DeleteModal.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_DeleteModal.cshtml
@@ -3,8 +3,7 @@
     Layout = "~/Views/Shared/Layouts/Modals/_DeleteModalLayout.cshtml";
 }
 
-@section ModalContent 
-{
+@section ModalContent {
     @if (!string.IsNullOrWhiteSpace(Model.WarningMessage))
     {
         <p class="text-gray-500 dark:text-neutral-500">@Model.WarningMessage</p>
@@ -15,12 +14,10 @@
         <div class="mt-3">
             <p class="text-red-800 rounded-full dark:text-red-500">@Model.DangerMessage</p>
         </div>
-        
     }
 }
 
-@section ModalSubmitForm 
-{
+@section ModalSubmitForm {
     <form method="@Model.FormMethod" asp-controller="@Model.FormController" asp-action="@Model.FormAction">
         @Html.AntiForgeryToken()
 
@@ -31,10 +28,10 @@
 
         <div class="flex justify-end items-center gap-x-2 py-3 px-4 bg-gray-50 border-t border-gray-200 dark:bg-neutral-950 dark:border-neutral-800">
             <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 hover:bg-gray-50 dark:bg-transparent dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-800" data-hs-overlay="#@Model.ModalId">
-                @(!string.IsNullOrWhiteSpace(Model.DangerMessage) ? "Keep category" : "Cancel")
+                Cancel
             </button>
             <button type="submit" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-red-500 text-white hover:bg-red-600">
-                @(!string.IsNullOrWhiteSpace(Model.DangerMessage) ? "Delete category and update related points of interest" : "Delete category")
+                Delete point of interest
             </button>
         </div>
     </form>
