--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiList/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiList/Default.cshtml
@@ -1,128 +1,88 @@
 ﻿@model LiveMapDashboard.Web.Models.Poi.PoiListViewModel
 
-<div class="py-4 flex justify-end">
-    <a asp-controller="Poi" asp-action="PoiCreateForm" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
-        New Point Of Interest
-    </a>
-</div>
-
-@if (ViewData["SuccessMessage"] != null || ViewData["ErrorMessage"] != null)
-{
-<div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
-    @if (ViewData["SuccessMessage"] != null)
-    {
-    <div class="mt-2 bg-teal-100 border border-teal-200 text-sm text-teal-800 rounded-lg p-4 dark:bg-teal-800/10 dark:border-teal-900 dark:text-teal-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-success-label">
-        @ViewData["SuccessMessage"]
-    </div>
-    }
-
-    @if (ViewData["ErrorMessage"] != null)
-    {
-    <div class="mt-2 bg-red-100 border border-red-200 text-sm text-red-800 rounded-lg p-4 dark:bg-red-800/10 dark:border-red-900 dark:text-red-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-danger-label">
-        @ViewData["ErrorMessage"]
-    </div>
-    }
-</div>
+@{
+    Layout = "~/Views/Shared/Layouts/_DefaultLayout.cshtml";
 }
 
-<div class="flex flex-col">
-    <div class="-m-1.5 overflow-x-auto">
-        <div class="p-1.5 min-w-full inline-block align-middle">
-            <div class="border border-gray-200 rounded-lg overflow-hidden dark:border-neutral-700">
-                <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
-                    <thead>
-                    <tr>
-                        <th scope="col"
-                            class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
-                            Id
-                        </th>
-                        <th scope="col"
-                            class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
-                            Name
-                        </th>
-                        <th scope="col"
-                            class="px-6 py-3 text-end text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
-                            Action
-                        </th>
-                    </tr>
-                    </thead>
-                    <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-                    @foreach (
-                        var poi in Model.Pois)
-                    {
-                        <tr>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
-                                @poi.Id
-                            </td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-neutral-200">
-                                @poi.Name
-                            </td>
-                            <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
-                                <a asp-action="form" asp-controller="Poi" asp-route-id="@poi.Id"
-                                   class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">
-                                    Edit
-                                </a>
-
-                                <button type="button" class="inline-flex items-center gap-x-2 pl-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-hidden focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none dark:text-red-500 dark:hover:text-red-400 dark:focus:text-red-400" aria-haspopup="dialog" aria-expanded="false" aria-controls="delete-alert-@poi.Id" data-hs-overlay="#delete-alert-@poi.Id">
-                                    Delete
-                                </button>
-                            </td>
-                        </tr>
-                    }
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
-
-@foreach (var poi in Model.Pois)
+@section TopBarActions
 {
-    <div id="delete-alert-@poi.Id" class="hs-overlay hidden size-full fixed top-0 start-0 z-80 overflow-x-hidden overflow-y-auto" role="dialog" tabindex="-1" aria-labelledby="delete-alert-@poi.Id-label">
-        <div class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all md:max-w-2xl md:w-full m-3 md:mx-auto">
-            <div class="relative flex flex-col bg-white border border-gray-200 shadow-2xs rounded-xl overflow-hidden dark:bg-neutral-900 dark:border-neutral-800">
-                <div class="absolute top-2 end-2">
-                    <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-hidden focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-700 dark:hover:bg-neutral-600 dark:text-neutral-400 dark:focus:bg-neutral-600" aria-label="Close" data-hs-overlay="#delete-alert-@poi.Id">
-                        <span class="sr-only">Close</span>
-                        <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
-                    </button>
+    <div class="py-4 flex justify-end">
+        <a asp-controller="Poi" asp-action="PoiCreateForm" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
+            New Point Of Interest
+        </a>
+    </div>    
+}
+
+@section Content
+{
+    <div class="flex flex-col">
+        <div class="-m-1.5 overflow-x-auto">
+            <div class="p-1.5 min-w-full inline-block align-middle">
+                <div class="border border-gray-200 rounded-lg overflow-hidden dark:border-neutral-700">
+                    <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
+                        <thead>
+                        <tr>
+                            <th scope="col"
+                                class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
+                                Id
+                            </th>
+                            <th scope="col"
+                                class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
+                                Name
+                            </th>
+                            <th scope="col"
+                                class="px-6 py-3 text-end text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
+                                Action
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+                        @foreach (var poi in Model.Pois)
+                        {
+                            <tr>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
+                                    @poi.Id
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-neutral-200">
+                                    @poi.Name
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
+                                    <a asp-action="form" asp-controller="Poi" asp-route-id="@poi.Id"
+                                       class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">
+                                        Edit
+                                    </a>
+
+                                    <button type="button" class="inline-flex items-center gap-x-2 pl-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-hidden focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none dark:text-red-500 dark:hover:text-red-400 dark:focus:text-red-400" aria-haspopup="dialog" aria-expanded="false" aria-controls="delete-alert-@poi.Id" data-hs-overlay="#delete-alert-@poi.Id">
+                                        Delete
+                                    </button>
+                                </td>
+                            </tr>
+                        }
+                        </tbody>
+                    </table>
                 </div>
-
-                <div class="p-4 sm:p-10 overflow-y-auto">
-                    <div class="flex gap-x-4 md:gap-x-7">
-                        <span class="shrink-0 inline-flex justify-center items-center size-11 sm:w-15.5 sm:h-15.5 rounded-full border-4 border-red-50 bg-red-100 text-red-500 dark:bg-red-700 dark:border-red-600 dark:text-red-100">
-                            <svg class="shrink-0 size-5" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                              <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                            </svg>
-                        </span>
-
-                        <div class="grow">
-                            <h3 id="delete-alert-@poi.Id-label" class="mb-2 text-xl font-bold text-gray-800 dark:text-neutral-200">
-                                Delete Point Of Interest: @poi.Name
-                            </h3>
-                            <p class="text-gray-500 dark:text-neutral-500">
-                                Permanently remove the point of interest and all of its contents from the map. This action is not reversible, so please continue with caution.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <form method="post" asp-controller="poi" asp-action="Delete">
-                    @Html.AntiForgeryToken()
-
-                    <input type="hidden" name="Id" value="@poi.Id"/>
-
-
-                    <div class="flex justify-end items-center gap-x-2 py-3 px-4 bg-gray-50 border-t border-gray-200 dark:bg-neutral-950 dark:border-neutral-800">
-                        <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-hidden focus:bg-gray-50 dark:bg-transparent dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-800 dark:focus:bg-neutral-800" data-hs-overlay="#delete-alert-@poi.Id">
-                            Cancel
-                        </button>
-                        <button type="submit" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-red-500 text-white hover:bg-red-600 disabled:opacity-50 disabled:pointer-events-none">
-                            Delete point of interest
-                        </button>
-                    </div>
-                </form>
             </div>
         </div>
     </div>
+
+    @foreach (
+        var deleteModal in Model.Pois.Select(poi => new LiveMapDashboard.Web.Models.Modal.DeleteModalViewModel
+            {
+                ModalId = $"delete-alert-{poi.Id}",
+                ModalTitle = $"Delete Point Of Interest: {poi.Name}",
+                FormMethod = "post",
+                FormController = "Poi",
+                FormAction = "Delete",
+                WarningMessage = "Permanently remove the point of interest and all of its contents from the map. This action is not reversible, so please continue with caution.",
+                DangerMessage = null,
+                HiddenInputs = new Dictionary<string, string>
+                {
+                    { "Id", poi.Id }
+                }
+            }
+        )
+    )
+    {
+        @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_DeleteModal.cshtml", deleteModal)
+    }
 }
