--- a/LiveMapDashboard.Web/Views/Shared/Layouts/Modals/_DeleteModalLayout.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Layouts/Modals/_DeleteModalLayout.cshtml
@@ -1,10 +1,10 @@
 ﻿@model LiveMapDashboard.Web.Models.Modal.DeleteModalViewModel
 
-<div id="@Model.ModalId" class="hs-overlay hidden size-full fixed top-0 start-0 z-80 overflow-x-hidden overflow-y-auto" role="dialog" tabindex="-1" aria-labelledby="modal-@Model.ModalId-label">
+<div id="@Model.ModalId" class="hs-overlay hidden size-full fixed top-0 start-0 z-80 overflow-x-hidden overflow-y-auto" role="dialog" tabindex="-1" aria-labelledby="@Model.ModalId-label">
     <div class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all md:max-w-2xl md:w-full m-3 md:mx-auto">
         <div class="relative flex flex-col bg-white border border-gray-200 shadow-2xs rounded-xl overflow-hidden dark:bg-neutral-900 dark:border-neutral-800">
             <div class="absolute top-2 end-2">
-                <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-hidden focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-700 dark:hover:bg-neutral-600 dark:text-neutral-400 dark:focus:bg-neutral-600" aria-label="Close" data-hs-overlay="#modal-@Model.ModalId">
+                <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-hidden focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-700 dark:hover:bg-neutral-600 dark:text-neutral-400 dark:focus:bg-neutral-600" aria-label="Close" data-hs-overlay="#@Model.ModalId">
                     <span class="sr-only">Close</span>
                     <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
                 </button>
@@ -19,7 +19,7 @@
                     </span>
 
                     <div class="grow">
-                        <h3 id="modal-@Model.ModalId-label" class="mb-2 text-xl font-bold text-gray-800 dark:text-neutral-200">
+                        <h3 id="@Model.ModalId-label" class="mb-2 text-xl font-bold text-gray-800 dark:text-neutral-200">
                             @Model.ModalTitle
                         </h3>
                         
