--- a/LiveMapDashboard.Web/Views/Park/Index.cshtml
+++ b/LiveMapDashboard.Web/Views/Park/Index.cshtml
@@ -16,8 +16,7 @@
                         <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
                             <thead>
                                 <tr>
-                                    <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">Type</th>
-                                    <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 dark:text-neutral-500">Tijd</th>
+                                    <th scope="col" class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">Name</th>
                                     <th scope="col" class="px-6 py-3 text-end text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">Actions</th>
                                 </tr>
                             </thead>
@@ -26,17 +25,7 @@
                                 {
                                     <tr>
                                         <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
-                                            @* @if (rfc.PoiId == null) *@
-                                            @* { *@
-                                            @*     <span>Wijzigingsverzoek</span> *@
-                                            @* } *@
-                                            @* else *@
-                                            @* { *@
-                                            @*     <span>Nieuwe POI</span> *@
-                                            @* } *@
-                                        </td>
-                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-neutral-200">
-                                            @* @ParkListViewModel.ToDateTime(rfc.SubmittedOn) *@
+                                            @map.Name
                                         </td>
                                         <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
                                             <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">Aanpassen</button>
