--- a/LiveMapDashboard.Web/wwwroot/css/site.css
+++ b/LiveMapDashboard.Web/wwwroot/css/site.css
@@ -51,3 +51,10 @@ body {
 .fade-out {
     opacity: 0;
 }
+
+.custom-marker {
+    border-radius: 50%;
+    padding: 1px;
+    background-color: white;
+    border: 2px solid black;
+}
