--- a/LiveMapDashboard.Web/Views/RequestForChange/Form.cshtml
+++ b/LiveMapDashboard.Web/Views/RequestForChange/Form.cshtml
@@ -1,80 +1,7 @@
 ﻿@using LiveMapDashboard.Web.Models.Rfc
 @model RequestForChangeFormViewModel
 
-<div class="max-w-10xl pt-2 px-4 sm:px-6 lg:px-6 lg:pt-2 mx-auto">
-    <div class="flex justify-between">
-        @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_GoBack.cshtml", Model.CrudformViewModel)
-
-        @if (!string.IsNullOrEmpty(Model.CrudformViewModel.Id))
-        {
-            @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_Delete.cshtml", Model.CrudformViewModel)
-        }
-    </div>
-</div>
-
-@if (ViewData["SuccessMessage"] != null || ViewData["ErrorMessage"] != null)
-{
-    <div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
-        @if (ViewData["SuccessMessage"] != null)
-        {
-            <div class="mt-2 bg-teal-100 border border-teal-200 text-sm text-teal-800 rounded-lg p-4 dark:bg-teal-800/10 dark:border-teal-900 dark:text-teal-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-success-label">
-                @ViewData["SuccessMessage"]
-            </div>
-        }
-
-        @if (ViewData["ErrorMessage"] != null)
-        {
-            <div class="mt-2 bg-red-100 border border-red-200 text-sm text-red-800 rounded-lg p-4 dark:bg-red-800/10 dark:border-red-900 dark:text-red-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-danger-label">
-                @ViewData["ErrorMessage"]
-            </div>
-        }
-    </div>
-}
-
-<div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
-    <form method="post" asp-controller="rfc" asp-action="approvalFormSubmit">
-        @Html.AntiForgeryToken()
-        <div asp-validation-summary="ModelOnly" class="text-red-500 mb-4"></div>
-
-        <input type="hidden" asp-for="Rfc.Id" />
-        <input type="hidden" asp-for="CrudformViewModel.Id" />
-        <input type="hidden" asp-for="CrudformViewModel.MapId" />
-        <input type="hidden" id="Coordinate_Latitude" asp-for="CrudformViewModel.Coordinate.Latitude" />
-        <input type="hidden" id="Coordinate_Longitude" asp-for="CrudformViewModel.Coordinate.Longitude" />
-
-        <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
-            @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_Map.cshtml", Model.CrudformViewModel)
-            
-            <div>
-                @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_LocationButton.cshtml", Model.CrudformViewModel)
-                @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_FormFields.cshtml", Model.CrudformViewModel)
-                @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_OpeningHours.cshtml", Model.CrudformViewModel)
-            </div>
-        </div>
-        
-        <div class="mt-2 py-4 relative z-10">
-            <div class="flex justify-end gap-3 w-full">
-                @if (!string.IsNullOrEmpty(Model.CrudformViewModel.Id))
-                {
-                    <a asp-controller="rfc" asp-action="Index" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600">
-                        Cancel
-                    </a>
-                }
-                else
-                {
-                    <a class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600" aria-haspopup="dialog" aria-expanded="false" aria-controls="go-back-alert" data-hs-overlay="#go-back-alert">
-                        Cancel
-                    </a>   
-                }
-                
-                <button type="submit"
-                        class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
-                    Approve
-                </button>
-            </div>
-        </div>
-    </form>
-</div>
+@await Component.InvokeAsync("RfcForm", Model)
 
 @section Scripts {
     <script src="~/js/map/park-place-markers-maplibre.js" asp-append-version="true" type="module"></script>
