--- a/LiveMapDashboard.Web/Views/Map/Index.cshtml
+++ b/LiveMapDashboard.Web/Views/Map/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@using LiveMap.Domain.Models
 @using LiveMapDashboard.Web.Models.Map
-@using LiveMapDashboard.Web.Models.Park
 @model MapListViewModel
 
 <div class="max-w-10xl pt-2 px-4 sm:px-6 lg:px-6 lg:pt-2 mx-auto">
@@ -29,8 +28,10 @@
                                             @map.Name
                                         </td>
                                         <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
-                                            <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">Edit</button>
-                                            <button type="button" class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-hidden focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none dark:text-red-500 dark:hover:text-red-400 dark:focus:text-red-400">Delete</button>
+                                            <a asp-action="form" asp-controller="Map" asp-route-id="@map.Id"
+                                               class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">
+                                               Edit
+                                            </a>
                                         </td>
                                     </tr>
                                 }
