--- a/LiveMapDashboard.Web/Views/Shared/Components/CategoryForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/CategoryForm/Default.cshtml
@@ -90,28 +90,6 @@
                 </div>
             </div>
 
-                    <div class="flex flex-col gap-6"></div>
-            <div class="mt-2 p-4 relative z-10 bg-white border border-gray-200 rounded-xl dark:bg-neutral-900 dark:border-neutral-700">
-                <div class="mb-2">
-                    <label for="newValue" class="block mb-2 text-sm font-medium">
-                        Category name
-                    </label>
-
-                    @{
-                        string placeHolder = Model.CategoryName != "" && Model.CategoryName is not null
-                        ? Model.CategoryName
-                        : "Some Name";
-                    }
-
-                    <input type="text" asp-for="NewValue" name="@nameof(Model.NewValue)"
-                           id="newValue"
-                           class="border py-2.5 sm:py-2 px-2 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
-                           placeholder="@placeHolder"
-                           value="@Model.CategoryName" />
-                    <span asp-validation-for="NewValue" class="text-sm text-red-600 mt-2"></span>
-                </div>
-            </div>
-
             <!-- 🔍 Icon Search Block -->
             <div class="mt-2 p-4 relative z-10 bg-white border border-gray-200 rounded-xl dark:bg-neutral-900 dark:border-neutral-700">
                 <label asp-for="IconName" class="block mb-2 text-sm font-medium">
@@ -136,11 +114,12 @@
                        value="@value"
                        placeholder="@placeholder"/>
 
-                <input type="hidden"
-                       asp-for="IconName"
-                       name="@nameof(Model.IconName)"
-                       id="iconNameField"
-                       value="@Model.IconName" />
+                @Html.EditorFor(m => m.IconName, new ViewDataDictionary(ViewData)
+                {
+                    { "value", Model.IconName },
+                    { "Label", "Icon name" },
+                    { "Hidden", true }
+                })
 
                 <span asp-validation-for="IconName" class="text-sm text-red-600 mt-2"></span>
 
@@ -148,7 +127,6 @@
                      class="mt-2 max-h-60 overflow-y-auto border border-gray-200 rounded p-2 bg-white dark:bg-neutral-900 shadow-inner text-sm">
                 </div>
             </div>
-        </div>
 
             <div class="mt-2 py-4 relative z-10">
                 <div class="flex justify-end gap-3 w-full">
