fix: roslyn null checks

--- a/LiveMapDashboard.Web/Views/Shared/Components/CategoryForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/CategoryForm/Default.cshtml
@@ -27,7 +27,8 @@
         HiddenInputs = new Dictionary<string, string>
         {
             { "CategoryName", Model.CategoryName },
-            { "NewValue", Model.CategoryName }
+            { "NewValue", Model.CategoryName },
+            { "IconName", Model.IconName }
         }
     } : null;
 }
