--- a/LiveMapDashboard.Web/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/CategoryList/Default.cshtml
@@ -76,7 +76,8 @@
             HiddenInputs = new Dictionary<string, string>
             {
                 { "CategoryName", category.CategoryName },
-                { "NewValue", category.CategoryName }
+                { "NewValue", category.CategoryName },
+                { "IconName", category.IconName }
             }
         };  
 
