--- a/LiveMapDashboard.Web/Views/Shared/EditorTemplates/Dropdown.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/EditorTemplates/Dropdown.cshtml
@@ -3,8 +3,21 @@
 @{
     var fieldName = ViewData.ModelMetadata.PropertyName;
     var labelText = ViewData["Label"] as string ?? fieldName;
-    var options = ViewData["Options"] as IEnumerable<string> ?? Enumerable.Empty<string>();
     var fullFieldName = ViewData.TemplateInfo.GetFullHtmlFieldName("");
+
+    var options = ViewData["Options"] as IEnumerable<string> ?? Enumerable.Empty<string>();
+    var iconNames = ViewData["IconNames"] as IEnumerable<string> ?? Enumerable.Empty<string>();
+
+    var optionsList = options.ToList();
+    var iconNamesList = iconNames.ToList();
+
+    for (var i = 0; i < optionsList.Count; i++)
+    {
+        if (i >= iconNamesList.Count || string.IsNullOrEmpty(optionsList[i]))
+        {
+            iconNamesList.Insert(i, string.Empty);
+        }
+    }
 }
 <div class="mb-2">
     @if (!string.IsNullOrEmpty(labelText))
@@ -17,11 +30,11 @@
     <select id="@fullFieldName" name="@fullFieldName"
             class="border py-2.5 px-2 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600">
         <option value="">-</option>
-        @foreach (var option in options)
+        @foreach (var (option, iconName) in optionsList.Zip(iconNamesList, (o, i) => (o, i)))
         {
-        <option value="@option" selected="@(Model == option ? "selected" : null)">
-            @option
-        </option>
+            <option value="@option" selected="@(Model == option ? "selected" : null)" data-iconname="@iconName">
+                @option
+            </option>
         }
     </select>
 
